// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hould correctly render  ExpensesSummary with multiple  expense 1`] = `
<div>
  <h1>
    Viewing 
    32
     
    expenses
     totalling 
    $231,231,231.25
  </h1>
</div>
`;

exports[`should correctly render  ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;
